<resources>
    <string name="app_name">Time-Tracking</string>
    <string name="nav_bottom_hom">Home</string>
    <string name="nav_home_calendar">Calendar</string>
    <string name="nav_home_settings">Settings</string>
    <string name="nav_top_dev_database_viewer">DEV: Database Viewer</string>
    <string name="nav_top_add_category">Add Category</string>
    <string name="nav_top_done">Done</string>
    <string name="nav_top_delete">Delete</string>
    <string name="add_category_title"><b>Add new category:</b></string>
    <string name="add_category_name">Category Name:</string>
    <string name="add_category_name_hint">Name</string>
    <string name="add_category_color">Color</string>
    <string name="add_time_title"><b>Add new Time-Entry:</b></string>
    <string name="add_time_category">Category:</string>
    <string name="add_time_start_time">Start Time:</string>
    <string name="add_time_start_date">Start Date:</string>
    <string name="add_time_end_time">End Time:</string>
    <string name="add_time_end_date">End Date:</string>
    <string name="calendar_action_today">Today</string>
    <string name="calendar_action_day_view">Day view</string>
    <string name="calendar_action_three_day_view">3 day view</string>
    <string name="calendar_action_week_view">Week view</string>
    <string name="calendar_drag_me">Drag Me</string>
    <string name="calendar_untitled_event">Untitled event</string>
    <string name="popup_menu_edit">Edit Activity</string>
    <string name="popup_menu_delete">Delete Activity</string>
    <string name="popup_menu_toggle_activation">Toggle Activity activation</string>
    <string name="popup_menu_deactivate">Deactivate Activity</string>
    <string name="popup_menu_activate">Activate Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="prefs_title_calendar">Calendar</string>
    <string name="prefs_title_appearance">Appearance</string>
    <string name="prefs_title_other">Other</string>
    <string name="prefs_dark_mode">Dark Mode [TODO]</string>
    <string name="prefs_simultaneous_activities_active">Simultaneous Activities [TODO]</string>
    <string name="prefs_simultaneous_activities_active_long">
            Allow multiple Activities running at the same time</string>
    <string name="prefs_remove_short_entries">Remove short entries [TODO]</string>
    <string name="prefs_remove_short_entries_long">
            Remove all entries with a duration of less that 1 minute</string>
    <string name="pref_third_party">Third-Party Software</string>
    <string name="third_party_title"><b>Third Party Apps</b></string>
    <string name="third_party_text_week_view">&week_view;</string>
    <string name="third_party_text_joda_time">&joda_time;</string>
    <string name="third_party_text_butter_knife">&butter_knife;</string>
    <string name="third_party_text_material_icons">&material_icons;</string>
    <string name="third_party_text_color_picker">&color_picker;</string>
    <string name="third_party_text_calendar_view">&calendar_view;</string>
    <string name="third_party_text_database_manager">&database_manager;</string>
    <string name="third_party_link_week_view">
        <a href="https://github.com/AndroidDeveloperLB/Android-Week-View">
            https://github.com/AndroidDeveloperLB/Android-Week-View
        </a>
    </string>
    <string name="third_party_link_joda_time">
        <a href="https://github.com/dlew/joda-time-android">
            https://github.com/dlew/joda-time-android
        </a>
    </string>
    <string name="third_party_link_butter_knife">
        <a href="https://github.com/JakeWharton/butterknife">
            https://github.com/JakeWharton/butterknife
        </a>
    </string>
    <string name="third_party_link_material_icons">
        <a href="https://material.io/resources/icons">
            https://material.io/resources/icons
        </a>
    </string>
    <string name="third_party_link_color_picker">
        <a href="https://github.com/AzeeSoft/AndroidPhotoshopColorPicker">
            https://github.com/AzeeSoft/AndroidPhotoshopColorPicker
        </a>
    </string>
    <string name="third_party_link_calendar_view">
        <a href="https://github.com/prolificinteractive/material-calendarview">
            https://github.com/prolificinteractive/material-calendarview
        </a>
    </string>
    <string name="third_party_link_database_manager">
        <a href="https://github.com/JakeWharton/butterknife">
            https://github.com/prolificinteractive/material-calendarview
        </a>
    </string>
</resources>