<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/prefs_title_calendar">

        <SwitchPreferenceCompat
            app:key="simultaneous_activities"
            app:title="@string/prefs_simultaneous_activities_active"
            app:summary="@string/prefs_simultaneous_activities_active_long"
            android:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="remove_short_entries"
            app:title="@string/prefs_remove_short_entries"
            app:summary="@string/prefs_remove_short_entries_long"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/prefs_title_appearance">

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/prefs_dark_mode"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/prefs_title_other">

        <Preference
            app:key="third_party"
            app:title="@string/pref_third_party"/>

        <Preference
            app:key="delete_data"
            app:title="@string/pref_delete_data"/>

    </PreferenceCategory>

    <!-- Here for reference of what can be done

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    -->

</androidx.preference.PreferenceScreen>
