<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity">
    <item
        android:id="@+id/action_today"
        android:title="@string/calendar_action_today"
        android:orderInCategory="1000"
        app:showAsAction="ifRoom" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_day_view"
            android:title="@string/calendar_action_day_view"
            android:orderInCategory="1"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_three_day_view"
            android:title="@string/calendar_action_three_day_view"
            android:orderInCategory="2"
            app:showAsAction="ifRoom"
            android:checked="true" />
        <item
            android:id="@+id/action_week_view"
            android:title="@string/calendar_action_week_view"
            android:orderInCategory="3"
            app:showAsAction="ifRoom" />
    </group>
</menu>
